--- a/.github/workflows/maain.yml
+++ b/.github/workflows/maain.yml
@@ -42,12 +42,12 @@ jobs:
               per_page: 100
             });
             const art = arts.data.artifacts.find(a => a.name === 'futurerestore-macOS-RELEASE');
-            if (!art) throw new Error('No futurerestore-macOS-RELEASE artifact found');
+            if (!art) throw new Error('No futererestore-macOS-RELEASE artifact found');
             return art.id;
 
       - name: Download & unzip macOS RELEASE
         run: |
-          ART=$(( steps.find_macos_release.outputs.result ))
+          ART=${{ steps.find_macos_release.outputs.result }}
           curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/futurerestore/futurerestore/actions/artifacts/$ART/zip \
             -o macos-release.zip
@@ -65,12 +65,12 @@ jobs:
               per_page: 100
             });
             const art = arts.data.artifacts.find(a => a.name === 'futurerestore-macOS-DEBUG');
-            if (!art) throw new Error('No futurerestore-macOS-DEBUG artifact found');
+            if (!art) throw new Error('No futererestore-macOS-DEBUG artifact found');
             return art.id;
 
       - name: Download & unzip macOS DEBUG
         run: |
-          ART=$(( steps.find_macos_debug.outputs.result ))
+          ART=${{ steps.find_macos_debug.outputs.result }}
           curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/futurerestore/futurerestore/actions/artifacts/$ART/zip \
             -o macos-debug.zip
@@ -84,18 +84,18 @@ jobs:
           script: |
             const arts = await github.rest.actions.listArtifactsForRepo({
               owner: 'futurerestore',
-              repo: 'futererestore',
+              repo: 'futurerestore',
               per_page: 100
             });
-            const art = arts.data.artifacts.find(a => a.name === 'futererestore-macOS-ASAN');
-            if (!art) throw new Error('No futurerestore-macOS-ASAN artifact found');
+            const art = arts.data.artifacts.find(a => a.name === 'futurerestore-macOS-ASAN');
+            if (!art) throw new Error('No futererestore-macOS-ASAN artifact found');
             return art.id;
 
       - name: Download & unzip macOS ASAN
         run: |
-          ART=$(( steps.find_macos_asan.outputs.result ))
+          ART=${{ steps.find_macos_asan.outputs.result }}
           curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/futurerestore/futererestore/actions/artifacts/$ART/zip \
+            https://api.github.com/repos/futurerestore/futurerestore/actions/artifacts/$ART/zip \
             -o macos-asan.zip
           unzip -o macos-asan.zip -d ${{ github.workspace }}/.github/workflows
 
@@ -111,19 +111,19 @@ jobs:
           ${{ github.workspace }}/.github/workflows/mac-post.sh
 
       - name: Upload macOS RELEASE Archive
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: futererestore-macOS-RELEASE
-          path: ${{ github.workspace }}/futererestore-macOS-*-RELEASE.tar.xz
+          path: ${{ github.workspace }}/futurerestore-macOS-*-RELEASE.tar.xz
 
       - name: Upload macOS DEBUG Archive
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: futererestore-macOS-DEBUG
-          path: ${{ github.workspace }}/futererestore-macOS-*-DEBUG.tar.xz
+          path: ${{ github.workspace }}/futurerestore-macOS-*-DEBUG.tar.xz
 
       - name: Upload macOS ASAN Archive
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: futererestore-macOS-ASAN
           path: ${{ github.workspace }}/futererestore-macOS-*-ASAN.tar.xz
@@ -149,7 +149,7 @@ jobs:
           script: |
             const arts = await github.rest.actions.listArtifactsForRepo({
               owner: 'futurerestore',
-              repo: 'futererestore',
+              repo: 'futurerestore',
               per_page: 100
             });
             const art = arts.data.artifacts.find(a => a.name === 'futererestore-Linux-x86_64-RELEASE');
@@ -158,7 +158,7 @@ jobs:
 
       - name: Download & unzip Linux RELEASE
         run: |
-          ART=$(( steps.find_linux_release.outputs.result ))
+          ART=${{ steps.find_linux_release.outputs.result }}
           curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/futurerestore/futurerestore/actions/artifacts/$ART/zip \
             -o linux-release.zip
@@ -172,18 +172,18 @@ jobs:
           script: |
             const arts = await github.rest.actions.listArtifactsForRepo({
               owner: 'futurerestore',
-              repo: 'futererestore',
+              repo: 'futurerestore',
               per_page: 100
             });
-            const art = arts.data.artifacts.find(a => a.name === 'futurerestore-Linux-x86_64-DEBUG');
+            const art = arts.data.artifacts.find(a => a.name === 'futererestore-Linux-x86_64-DEBUG');
             if (!art) throw new Error('No futererestore-Linux-x86_64-DEBUG artifact found');
             return art.id;
 
       - name: Download & unzip Linux DEBUG
         run: |
-          ART=$(( steps.find_linux_debug.outputs.result ))
+          ART=${{ steps.find_linux_debug.outputs.result }}
           curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/futererestore/futererestore/actions/artifacts/$ART/zip \
+            https://api.github.com/repos/futurerestore/futurerestore/actions/artifacts/$ART/zip \
             -o linux-debug.zip
           unzip -o linux-debug.zip -d ${{ github.workspace }}/.github/workflows
 
@@ -204,9 +204,9 @@ jobs:
 
       - name: Download & unzip Linux ASAN
         run: |
-          ART=$(( steps.find_linux_asan.outputs.result ))
+          ART=${{ steps.find_linux_asan.outputs.result }}
           curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/futurerestore/futererestore/actions/artifacts/$ART/zip \
+            https://api.github.com/repos/futurerestore/futurerestore/actions/artifacts/$ART/zip \
             -o linux-asan.zip
           unzip -o linux-asan.zip -d ${{ github.workspace }}/.github/workflows
 
@@ -221,19 +221,6 @@ jobs:
             /tmp/Builder/repos/futererestore/.github/workflows/linux-post.sh
 
       - name: Upload Linux x86_64 RELEASE Archive
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
-          name: futererestore-Linux-x86_64-RELEASE
-          path: ${{ github.workspace }}/.github/workflows/futererestore-Linux-x86_64*-RELEASE.tar.xz
-
-      - name: Upload Linux x86_64 DEBUG Archive
-        uses: actions/upload-artifact@v2
-        with:
-          name: futererestore-Linux-x86_64-DEBUG
-          path: ${{ github.workspace }}/.github/workflows/futererestore-Linux-x86_64*-DEBUG.tar.xz
-
-      - name: Upload Linux x86_64 ASAN Archive
-        uses: actions/upload-artifact@v2
-        with:
-          name: futererestore-Linux-x86_64-ASAN
-          path: ${{ github.workspace }}/.github/workflows/futererestore-Linux-x86_64*-ASAN.tar.xz
+          name: futererestore-Linux-x86_64-
